--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ footer {
     justify-content: center;
     align-items: center;
 }
+#contato {
+    color: white;
+    text-align: center;
+}
 
 /* Consulta de mídia para dispositivos com largura máxima de 600px */
 @media only screen and (max-width: 600px) {
