--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ footer {
 #contato {
     color: white;
     text-align: center;
+    -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: black;
 }
 
