--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ footer {
     align-items: center;
 }
 #contato {
-    font-size: 30px
+    font-size: 30px;
     color: white;
     text-align: center;
     -webkit-text-stroke-width: 0.3px;
