--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ footer {
 #contato {
     font-size: 20px;
     color: white;
+    font-weight: bold;
     text-align: center;
     -webkit-text-stroke-width: 0.4px;
     -webkit-text-stroke-color: black;
