margin-top formulario de contato

--- a/style.css
+++ b/style.css
@@ -77,6 +77,9 @@ footer {
     -webkit-text-stroke-width: 0.4px;
     -webkit-text-stroke-color: black;
 }
+#contatoForm {
+    margin-top: 10px;
+}
 
 /* Consulta de mídia para dispositivos com largura máxima de 600px */
 @media only screen and (max-width: 600px) {
