--- a/style.css
+++ b/style.css
@@ -79,11 +79,11 @@ footer {
 }
 #contato {
     font-size: 20px;
-    color: white;
+    color: rgb(0, 0, 0);
     font-weight: bold;
     text-align: center;
     -webkit-text-stroke-width: 0.4px;
-    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-color: rgb(213, 213, 213);
 }
 #contatoForm {
     margin-top: 10px;
